<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SoccerIn</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Home</string>
    <string name="convocatoria">Convocatorias</string>
    <string name="equipos">Equipos</string>
    <string name="jugadores">Jugadores</string>
    <string name="eventos">Eventos</string>
    <string name="personal">Mi Perfil</string>
    <string name="title_activity_profile">Mi Perfil</string>
    <string name="posicion">"Posición: "</string>
    <string name="edad">"Edad: "</string>
    <string name="ciudad">"Ciudad: "</string>
    <string name="title_activity_call">Call</string>
    <string name="title_activity_team">Team</string>
    <string name="title_activity_event">Event</string>
    <string name="title_activity_chat">Chat</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="username">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="calificacion">Calificación</string>
    <string name="nivel_juego">"Nivel de Juego: "</string>
    <string name="event_date">"Fecha: "</string>
    <string name="event_field">"Cancha: "</string>
    <string name="event_duration">"Duración: "</string>
    <string name="my_event">Mis Eventos</string>
    <string name="event_create">Crear Evento</string>
    <string name="event_cancha">"Cancha: "</string>
    <string name="event_hours">"Hora: "</string>
    <string name="event_user">Usuario:</string>
    <string name="all_event">Todos Los Eventos</string>
    <string name="team_name">"Nombre: "</string>
    <string name="team_foto">"Foto: "</string>
    <string name="team_description">"Descripción: "</string>
    <string name="team_user">"Representante: "</string>
    <string name="all_team">Todos Los Equipos</string>
    <string name="my_team">Mis Equipos</string>
    <string name="team_create">Crear Equipo</string>
    <string name="team_all_team">Lista de Equipos</string>
    <string name="team_confirm">¿Desea inscribirse en este equipo?</string>
    <string name="team_confirm_yes">Si</string>
    <string name="team_confirm_no">No</string>
    <string name="menu_share">Compartir</string>
    <string name="login_start">Iniciar Sesión</string>
    <string name="login_tw">Twitter</string>
    <string name="profile_name">Nombre:</string>
    <string name="profile_email">Email:</string>
    <string name="profile_update">Guardar Cambios</string>
    <string name="profile_cancel">Cancelar</string>
    <string name="profile_friends">Amigos</string>
    <string name="profile_inbox">Mensajes</string>

</resources>