<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/item_team_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_user"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/item_team_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_date"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/item_event_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_field"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/item_event_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_duration"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>