<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_header"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/shape_header"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/login_init"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/back"
                    android:minWidth="48dip" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="6"
                android:orientation="vertical" >

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/call_diary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/settings"
                    android:minWidth="48dip"
                    android:onClick="goToChat" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.25"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_home_convocatoria"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/instant_nick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/convocatoria"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_convocatorias"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/shape_home_convocatoria"
            android:onClick="goToCall" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.25"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_home_convocatoria"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/item_team_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equipos"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_equipos"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/shape_home_convocatoria"
            android:onClick="goToTeam" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.25"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_home_convocatoria"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_perfil"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/shape_home_convocatoria"
            android:onClick="goToProfile" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.25"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_home_convocatoria"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/profile_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eventos"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_eventos"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/shape_home_convocatoria"
            android:onClick="goToEvent" />

    </LinearLayout>

</LinearLayout>